k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-depl
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: ghcr.io/remla23-team16/app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  labels:
    app: app-svc
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
