k8s/monitoring.yml
apiVersion: v1
kind: Pod
metadata:
  name: showmetrics
  labels:
    app: showmetrics
spec:
  containers:
  - name: showmetrics
    image: proksch/showmetrics:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: showmetrics-serv
spec:
  type: NodePort
  selector:
    app: showmetrics
  ports:
    - port: 1234
      targetPort: 8080
